# SoLUSH-3

./: .gitignore  .gitmodules  EVOLUTION.md  ISSUE_TEMPLATE.md  Interpreter.md  README.md  example.md  flake.nix  tokenomics.md  vision.md
offchain/: Cargo.toml
offchain/src/: lib.rs  main.rs
offchain/src/compiler/: ast.rs  bytecode_generator.rs  bytecode_parser.rs  mod.rs  push3_describtor.rs
offchain/src/evm_integration/: revm_runner.rs
offchain/src/gp/: generate.rs  generate_spec.rs  genetic_ops.rs  local_mutation.rs  mod.rs  mutation.rs  population.rs  population_management.rs
offchain/src/helpers/: artifact.rs
offchain/src/runner/: mod.rs  revm_runner.rs
onchain/script/: Counter.s.sol
onchain/src/: Push3IntAdapter.sol  Push3Interpreter.sol
onchain/test/: Push3IntAdapter.t.sol  Push3Interpreter.t.sol
src/: Push3Interpreter.sol
test/: Push3IntAdapter.t.sol  Push3Interpreter.t.sol
tools/: README.md  compare_all_evolution.sh  compare_evolution.sh  compare_evolution_systems.sh  run_advanced_evolution.sh  run_debug.sh  run_detailed.sh  run_direct.sh  run_evolution.sh  run_expanded_evolution.sh  run_improved_evolution.sh  run_micro.sh  run_original_evolution.sh  run_short_evolution.sh  run_simple.sh
